# contracts

./: CICD_SETUP.md  Cargo.toml  DEPLOYMENT.md  Makefile  PR_DESCRIPTION.md  PR_DESCRIPTION_393.md  PR_DESCRIPTION_394.md  README.md  WASM_OPTIMIZATION.md  WASM_SIZE_BASELINE.md  deny.toml  task1.md
.github/workflows/: README.md  ci.yml  deploy-testnet.yml  security-audit.yml  wasm-size-check.yml
contracts/access-control/: Cargo.toml
contracts/access-control/src/: lib.rs  test.rs
contracts/allergy-management/src/: lib.rs  test.rs
contracts/allergy-tracking/src/: lib.rs  test.rs
contracts/care-plan/src/: lib.rs  test.rs
contracts/clinical-trial/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/dental-records/: Cargo.toml
contracts/dental-records/src/: lib.rs
contracts/doctor-registry/: Cargo.toml
contracts/doctor-registry/src/: lib.rs  test.rs
contracts/emergency-medical-info/src/: lib.rs  test.rs
contracts/financial-records/src/: lib.rs  test.rs
contracts/governance-voting/: Cargo.toml
contracts/governance-voting/src/: lib.rs  test.rs
contracts/hai-tracking/src/: lib.rs
contracts/health-records/: CHANGELOG.md  Cargo.toml
contracts/health-records/src/: cid_fuzz_tests.rs  lib.rs  test.rs
contracts/healthcare-analytics/: Cargo.toml
contracts/healthcare-analytics/src/: lib.rs  test.rs
contracts/healthcare-credentialing/src/: lib.rs
contracts/hospital-registry/: Cargo.toml
contracts/hospital-registry/src/: lib.rs  test.rs
contracts/imaging-radiology/src/: cid_fuzz_tests.rs  lib.rs  test.rs
contracts/insurer-registry/: Cargo.toml
contracts/insurer-registry/src/: lib.rs
contracts/lab-management/src/: lib.rs
contracts/liquidity-pool/: Cargo.toml
contracts/liquidity-pool/src/: lib.rs  test.rs
contracts/medical-claims/: Cargo.toml  RECONCILIATION.md
contracts/medical-claims/src/: lib.rs  test.rs  types.rs
contracts/medical-device-tracking/src/: lib.rs  test.rs  types.rs
contracts/mental-health/src/: test.rs
contracts/nft-badges/: Cargo.toml
contracts/nft-badges/src/: lib.rs  (+1 more)
contracts/nutrition-care-management/: OUTCOMES_TRACKING.md
contracts/patient-registry/: Cargo.toml
contracts/patient-registry/src/: lib.rs  merkle.rs  test.rs
contracts/patient-registry/test_snapshots/test/: test_grant_access_and_add_medical_record.1.json  test_is_patient_registered.1.json  test_register_and_get_patient.1.json  test_unauthorized_doctor_cannot_add_record.1.json  test_update_patient.1.json
contracts/provider-registry/: Cargo.toml
contracts/referral/: Cargo.toml
contracts/referral/src/: contract.rs  types.rs
contracts/scholarship-fund/: Cargo.toml
contracts/src/: lib.rs  test.rs
contracts/ttl-config/: Cargo.toml
contracts/zk-eligibility-verifier/: Cargo.toml
contracts/zk-eligibility-verifier/src/: lib.rs
docs/: interact.md  upgrade-guide.md
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  README.md
scripts/: check-wasm-sizes.sh  deploy_all.sh  measure-wasm-sizes.sh  profile-wasm.sh
(+77 files in other folders)
