[package]
name = "dental-records"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true }
shared = { workspace = true }
shared-contracts = { path = "..", package = "Contracts" }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[lib]
crate-type = ["cdylib", "rlib"]
