[package]
name = "health-records"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
shared = { workspace = true }
shared-contracts = { path = "..", package = "Contracts" }
soroban-sdk = { workspace = true }

[dev-dependencies]
patient-registry = { path = "../patient-registry" }
soroban-sdk = { workspace = true, features = ["testutils"] }
