[package]
name = "patient-registry"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
shared = { workspace = true }
soroban-sdk = { workspace = true }
ttl-config = { path = "../ttl-config" }

[dev-dependencies]
proptest = "1.4"
provider-registry = { path = "../provider-registry" }
soroban-sdk = { workspace = true, features = ["testutils"] }
