[package]
name = "referral"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { workspace = true }
shared-contracts = { path = "..", package = "Contracts" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
